Create ParentActivity.kt with dataBinding

--- a/app/src/main/res/layout/activity_develop_print.xml
+++ b/app/src/main/res/layout/activity_develop_print.xml
@@ -9,7 +9,7 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/print_parent_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -28,13 +28,13 @@
                 app:title='@{R.string.info_print_empty_title}' />
 
             <ProgressBar
-                android:id="@+id/print_progress"
+                android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/print_recycler"
+                android:id="@+id/recycler_view"
                 style="@style/RecyclerView.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
