--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/note_parent_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <View
-        android:id="@+id/note_toolbar_holder"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/clPrimary" />
-
-    <View
-        android:id="@+id/note_panel_holder"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/note_panel_height"
-        android:layout_gravity="bottom"
-        android:background="?attr/clPrimary" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <FrameLayout
-        android:id="@+id/note_fragment_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <View
+            android:id="@+id/toolbar_holder"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/clPrimary" />
+
+        <View
+            android:id="@+id/panel_holder"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/note_panel_height"
+            android:layout_gravity="bottom"
+            android:background="?attr/clPrimary" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
+
+</layout>
