--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -10,7 +10,7 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/notification_parent_container"
+        android:id="@+id/parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -22,25 +22,25 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/notification_info_include"
+                android:id="@+id/info_include"
                 layout="@layout/inc_info"
                 app:details='@{R.string.info_notification_empty_details}'
                 app:icon='@{R.mipmap.img_info_notifications}'
                 app:title='@{R.string.info_notification_empty_title}' />
 
             <ProgressBar
-                android:id="@+id/notification_progress"
+                android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
 
             <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:id="@+id/notification_recycler_container"
+                android:id="@+id/recycler_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/notification_recycler"
+                    android:id="@+id/recycler_view"
                     style="@style/RecyclerView.Normal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
