--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--  TODO change naming: description -> desc  -->
+
     <string name="description_add_note">Add note</string>
 
     <string name="description_note_restore">Restore</string>
@@ -21,9 +23,9 @@
 
     <string name="description_button_alarm_more">Select alarm repeat</string>
 
-    <string name="description_item_rank_show">Show category with name: %s</string>
-    <string name="description_item_rank_hide">Hide category with name: %s</string>
-    <string name="description_item_rank_cancel">Cancel category with name: %s</string>
+    <string name="desc_rank_show">Show category with name: %s</string>
+    <string name="desc_rank_hide">Hide category with name: %s</string>
+    <string name="desc_rank_cancel">Cancel category with name: %s</string>
 
     <string name="description_item_notification_cancel">Cancel notification with name:</string>
     <string name="description_item_notification_cancel_at">.\nWhich setup at:</string>
