--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -1,123 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rank_parent_card"
-    style="@style/Card.Item.Common">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:id="@+id/rank_click_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:padding="@dimen/item_container_space"
-        android:weightSum="1">
-
-        <!--TODO change size for another screens-->
-        <sgtmelon.iconanim.widget.SwitchButton
-            android:id="@+id/rank_visible_button"
-            style="@style/Button.Medium"
-            android:layout_marginStart="@dimen/item_content_horizontal_space"
-            android:layout_marginEnd="@dimen/item_content_between_space"
-            app:srcDisable="@drawable/ic_visible_exit"
-            app:srcDisableAnim="@drawable/anim_visible_exit"
-            app:srcDisableColor="?attr/clContent"
-            app:srcSelect="@drawable/ic_visible_enter"
-            app:srcSelectAnim="@drawable/anim_visible_enter"
-            app:srcSelectColor="?attr/clAccent"
-            tools:srcCompat="@drawable/ic_visible_enter"
-            tools:tint="@color/accent_dark" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/parent_card"
+        style="@style/Card.Item.Common">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/click_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/item_content_half_between_space"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:padding="@dimen/item_container_space"
+            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/rank_name_text"
-                style="@style/Text.SmallCard.Title"
-                tools:text="@string/preview_rank_name" />
+            <!--TODO change size for another screens-->
+            <sgtmelon.iconanim.widget.SwitchButton
+                android:id="@+id/visible_button"
+                style="@style/Button.Medium"
+                android:layout_marginStart="@dimen/item_content_horizontal_space"
+                android:layout_marginEnd="@dimen/item_content_between_space"
+                app:srcDisable="@drawable/ic_visible_exit"
+                app:srcDisableAnim="@drawable/anim_visible_exit"
+                app:srcDisableColor="?attr/clContent"
+                app:srcSelect="@drawable/ic_visible_enter"
+                app:srcSelectAnim="@drawable/anim_visible_enter"
+                app:srcSelectColor="?attr/clAccent"
+                tools:srcCompat="@drawable/ic_visible_enter"
+                tools:tint="@color/accent_dark" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:divider="@drawable/div_vertical_middle"
-                android:showDividers="middle">
+                android:layout_marginHorizontal="@dimen/item_content_half_between_space"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/name_text"
+                    style="@style/Text.SmallCard.Title"
+                    tools:text="@string/preview_rank_name" />
 
                 <LinearLayout
-                    android:id="@+id/rank_image_container"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:divider="@drawable/div_vertical_small"
-                    android:showDividers="middle"
-                    android:visibility="gone"
-                    tools:visibility="visible">
+                    android:divider="@drawable/div_vertical_middle"
+                    android:showDividers="middle">
 
                     <LinearLayout
-                        android:id="@+id/rank_notification_container"
+                        android:id="@+id/image_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:divider="@drawable/div_vertical_small"
+                        android:showDividers="middle"
                         android:visibility="gone"
                         tools:visibility="visible">
 
-                        <TextView
-                            android:id="@+id/rank_notification_text"
-                            style="@style/Text.SmallCard.Indicator"
-                            tools:text="5" />
+                        <LinearLayout
+                            android:id="@+id/notification_container"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            tools:visibility="visible">
 
-                        <ImageView
-                            android:id="@+id/rank_notification_image"
-                            style="@style/Image.Rank"
-                            android:importantForAccessibility="no"
-                            app:srcCompat="@drawable/ic_notifications" />
+                            <TextView
+                                android:id="@+id/notification_text"
+                                style="@style/Text.SmallCard.Indicator"
+                                tools:text="5" />
+
+                            <ImageView
+                                android:id="@+id/notification_image"
+                                style="@style/Image.Rank"
+                                android:importantForAccessibility="no"
+                                app:srcCompat="@drawable/ic_notifications" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/bind_container"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            tools:visibility="visible">
+
+                            <TextView
+                                android:id="@+id/bind_text"
+                                style="@style/Text.SmallCard.Indicator"
+                                tools:text=":D" />
+
+                            <ImageView
+                                android:id="@+id/bind_image"
+                                style="@style/Image.Rank"
+                                android:importantForAccessibility="no"
+                                app:srcCompat="@drawable/ic_bind_text" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/rank_bind_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        tools:visibility="visible">
-
-                        <TextView
-                            android:id="@+id/rank_bind_text"
-                            style="@style/Text.SmallCard.Indicator"
-                            tools:text="9" />
-
-                        <ImageView
-                            android:id="@+id/rank_bind_image"
-                            style="@style/Image.Rank"
-                            android:importantForAccessibility="no"
-                            app:srcCompat="@drawable/ic_bind_text" />
-
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/count_text"
+                        style="@style/Text.SmallCard.Subtitle"
+                        tools:text="@string/preview_rank_count" />
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/rank_text_count_text"
-                    style="@style/Text.SmallCard.Subtitle"
-                    tools:text="@string/preview_rank_count" />
-
             </LinearLayout>
+
+            <!--TODO change size for another screens-->
+            <ImageButton
+                android:id="@+id/cancel_button"
+                style="@style/Button.Medium"
+                android:layout_marginStart="@dimen/item_content_between_space"
+                android:layout_marginEnd="@dimen/item_content_horizontal_space"
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_cancel_enter"
+                app:tint="?attr/clContent" />
 
         </LinearLayout>
 
-        <!--TODO change size for another screens-->
-        <ImageButton
-            android:id="@+id/rank_cancel_button"
-            style="@style/Button.Medium"
-            android:layout_marginStart="@dimen/item_content_between_space"
-            android:layout_marginEnd="@dimen/item_content_horizontal_space"
-            android:contentDescription="@null"
-            app:tint="?attr/clContent"
-            app:srcCompat="@drawable/ic_cancel_enter" />
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</layout>
