--- a/app/src/main/res/layout/item_print_note.xml
+++ b/app/src/main/res/layout/item_print_note.xml
@@ -1,137 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Card.Item.Common">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        style="@style/Container.Print"
-        android:orientation="vertical">
+    <androidx.cardview.widget.CardView style="@style/Card.Item.Common">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/item_content_half_between_space"
-            android:orientation="horizontal">
+            style="@style/Container.Print"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/print_note_id_text"
-                style="@style/Text.SmallCard.Print.Order"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/item_content_between_space"
-                tools:text="ID: 1" />
+                android:layout_marginBottom="@dimen/item_content_half_between_space"
+                android:orientation="horizontal">
 
-            <View style="@style/Divider.Vertical" />
+                <TextView
+                    android:id="@+id/id_text"
+                    style="@style/Text.SmallCard.Print.Order"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/item_content_between_space"
+                    tools:text="ID: 1" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/type_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/item_content_between_space"
+                    tools:text="TP: text" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/color_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/item_content_between_space"
+                    tools:text="CL: 0" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/bin_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/item_content_between_space"
+                    tools:text="BN: true" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/status_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/item_content_between_space"
+                    tools:text="ST: false" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/item_content_half_between_space"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/rank_id_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/item_content_between_space"
+                    tools:text="RK_ID: 10" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/rank_ps_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/item_content_between_space"
+                    tools:text="RK_PS: 3" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/item_content_half_between_space"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/create_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/item_content_between_space"
+                    tools:text="CR: 09.03.2017 11:20:30" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/change_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/item_content_between_space"
+                    tools:text="CH: 01.12.2020 11:20:30" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/print_note_type_text"
+                android:id="@+id/name_text"
                 style="@style/Text.SmallCard.Print"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/item_content_between_space"
-                tools:text="TP: text" />
-
-            <View style="@style/Divider.Vertical" />
+                android:layout_marginBottom="@dimen/item_content_half_between_space"
+                tools:text="NM: 12312312312123123182736128367182367871263812" />
 
             <TextView
-                android:id="@+id/print_note_color_text"
+                android:id="@+id/note_text"
                 style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/item_content_between_space"
-                tools:text="CL: 0" />
-
-            <View style="@style/Divider.Vertical" />
-
-            <TextView
-                android:id="@+id/print_note_bin_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/item_content_between_space"
-                tools:text="BN: true" />
-
-            <View style="@style/Divider.Vertical" />
-
-            <TextView
-                android:id="@+id/print_note_status_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/item_content_between_space"
-                tools:text="ST: false" />
+                android:maxLines="3"
+                android:singleLine="false"
+                tools:text="TX: hello my friend\nI'm waiting you here\nfor a long time" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/item_content_half_between_space"
-            android:orientation="horizontal">
+    </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/print_note_rank_id_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/item_content_between_space"
-                tools:text="RK_ID: 10" />
-
-            <View style="@style/Divider.Vertical" />
-
-            <TextView
-                android:id="@+id/print_note_rank_ps_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/item_content_between_space"
-                tools:text="RK_PS: 3" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/item_content_half_between_space"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/print_note_create_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/item_content_between_space"
-                tools:text="CR: 09.03.2017 11:20:30" />
-
-            <View style="@style/Divider.Vertical" />
-
-            <TextView
-                android:id="@+id/print_note_change_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/item_content_between_space"
-                tools:text="CH: 01.12.2020 11:20:30" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/print_note_name_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/item_content_half_between_space"
-            tools:text="NM: 12312312312123123182736128367182367871263812" />
-
-        <TextView
-            android:id="@+id/print_note_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="3"
-            android:singleLine="false"
-            tools:text="TX: hello my friend\ni wait you here\nfor a long time" />
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</layout>
