--- a/app/src/main/res/layout/item_print_pref_key.xml
+++ b/app/src/main/res/layout/item_print_pref_key.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Card.Item.Common">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        style="@style/Container.Print"
-        android:orientation="vertical">
+    <androidx.cardview.widget.CardView style="@style/Card.Item.Common">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/item_content_between_space">
+            style="@style/Container.Print"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/item_content_between_space">
+
+                <TextView
+                    android:id="@+id/key_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/item_content_between_space"
+                    tools:text="Key: 1" />
+
+                <View style="@style/Divider.Vertical" />
+
+                <TextView
+                    android:id="@+id/def_text"
+                    style="@style/Text.SmallCard.Print"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/item_content_between_space"
+                    tools:text="Def: 10" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/print_pref_key_text"
+                android:id="@+id/value_text"
                 style="@style/Text.SmallCard.Print"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/item_content_between_space"
-                tools:text="Key: 1" />
-
-            <View style="@style/Divider.Vertical" />
-
-            <TextView
-                android:id="@+id/print_pref_def_text"
-                style="@style/Text.SmallCard.Print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/item_content_between_space"
-                tools:text="Def: 10" />
+                tools:text="Value: false" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/print_pref_value_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Value: false" />
+    </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</layout>
