--- a/app/src/main/res/layout/item_print_pref_path.xml
+++ b/app/src/main/res/layout/item_print_pref_path.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Card.Item.Common">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        style="@style/Container.Print"
-        android:orientation="vertical">
+    <androidx.cardview.widget.CardView style="@style/Card.Item.Common">
 
-        <TextView
-            android:id="@+id/print_pref_path_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="false"
-            tools:text="Path: root/android/..." />
+        <LinearLayout
+            style="@style/Container.Print"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/path_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="false"
+                tools:text="Path: root/android/..." />
 
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</layout>
