--- a/app/src/main/res/layout/item_print_visible.xml
+++ b/app/src/main/res/layout/item_print_visible.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Card.Item.Common">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        style="@style/Container.Print"
-        android:orientation="horizontal">
+    <androidx.cardview.widget.CardView style="@style/Card.Item.Common">
 
-        <TextView
-            android:id="@+id/print_visible_id_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/item_content_between_space"
-            tools:text="ID: 1" />
+        <LinearLayout
+            style="@style/Container.Print"
+            android:orientation="horizontal">
 
-        <View style="@style/Divider.Vertical" />
+            <TextView
+                android:id="@+id/id_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/item_content_between_space"
+                tools:text="ID: 1" />
 
-        <TextView
-            android:id="@+id/print_visible_note_id_text"
-            style="@style/Text.SmallCard.Print.Order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/item_content_between_space"
-            tools:text="NT_ID: 10" />
+            <View style="@style/Divider.Vertical" />
 
-        <View style="@style/Divider.Vertical" />
+            <TextView
+                android:id="@+id/note_id_text"
+                style="@style/Text.SmallCard.Print.Order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/item_content_between_space"
+                tools:text="NT_ID: 10" />
 
-        <TextView
-            android:id="@+id/print_visible_value_text"
-            style="@style/Text.SmallCard.Print"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/item_content_between_space"
-            tools:text="VL: false" />
+            <View style="@style/Divider.Vertical" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/value_text"
+                style="@style/Text.SmallCard.Print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/item_content_between_space"
+                tools:text="VL: false" />
 
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</layout>
