--- a/app/src/main/res/values-ru/strings_description.xml
+++ b/app/src/main/res/values-ru/strings_description.xml
@@ -25,8 +25,7 @@
     <string name="desc_rank_hide">Скрыть категорию с именем: %s</string>
     <string name="desc_rank_cancel">Убрать категорию с именем: %s</string>
 
-    <string name="description_item_notification_cancel">Убрать уведомление с именем:</string>
-    <string name="description_item_notification_cancel_at">.\nКоторое установлено на:</string>
+    <string name="desc_notification_cancel">Убрать уведомление с именем: %s\nКоторое установлено на: %s</string>
 
     <string name="description_item_roll_check">Отметить пункт с тектом:</string>
     <string name="description_item_roll_uncheck">Снать отметку пункта с тектом:</string>
