Fix work of ServiceDevelopFragment.kt and improve DotAnimation.kt

--- a/app/src/main/res/values/values_develop.xml
+++ b/app/src/main/res/values/values_develop.xml
@@ -7,8 +7,8 @@
     <string name="toast_dev_already" translatable="false">There is nothing to catch anymore :)</string>
     <string name="toast_dev_clear" translatable="false">Success preference data clear!</string>
     <string name="toast_dev_low_api" translatable="false">You have low Android API!</string>
-    <string name="toast_dev_service_run" translatable="false">Service is restarted after kill!</string>
-    <string name="toast_dev_service_fail" translatable="false">Service not wake up after kill!</string>
+    <string name="toast_dev_service_run" translatable="false">Service is response!</string>
+    <string name="toast_dev_service_fail" translatable="false">Service not response!</string>
 
     <!-- Preference titles -->
 
