--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -9,7 +9,9 @@
         android:orientation="vertical"
         tools:context="sgtmelon.scriptum.cleanup.presentation.screen.ui.impl.preference.PreferenceActivity">
 
-        <include layout="@layout/inc_toolbar_simple" />
+        <include
+            android:id="@+id/toolbar_include"
+            layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:id="@+id/fragment_container"
