--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/bin_info_include"
+                android:id="@+id/info_include"
                 layout="@layout/inc_info"
                 app:details='@{R.string.info_bin_empty_details}'
                 app:icon='@{R.mipmap.img_info_bin}'
