--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/notes_info_include"
+                android:id="@+id/info_include"
                 layout="@layout/inc_info"
                 app:details='@{isListHide ? R.string.info_notes_hide_details : R.string.info_notes_empty_details}'
                 app:icon='@{R.mipmap.img_info_notes}'
