--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -35,7 +35,7 @@
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/rank_info_include"
+                android:id="@+id/info_include"
                 layout="@layout/inc_info"
                 app:details='@{R.string.info_rank_empty_details}'
                 app:icon='@{R.mipmap.img_info_rank}'
