--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -65,7 +65,7 @@
             android:layout_weight="1">
 
             <include
-                android:id="@+id/roll_note_info_include"
+                android:id="@+id/info_include"
                 layout="@layout/inc_info"
                 android:visibility="gone"
                 app:details='@{isListEmpty ? R.string.info_roll_empty_details : isListHide ? R.string.info_roll_hide_details : R.string.info_null}'
