--- a/app/src/main/res/layout/inc_toolbar_simple.xml
+++ b/app/src/main/res/layout/inc_toolbar_simple.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Toolbar.Fix">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_container"
-        style="?attr/styleToolbar"
-        tools:menu="@menu/fragment_notes"
-        tools:title="Test title"
-        app:popupTheme="?attr/themePopup" />
+    <com.google.android.material.appbar.AppBarLayout style="@style/Toolbar.Fix">
 
-</com.google.android.material.appbar.AppBarLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="?attr/styleToolbar"
+            app:popupTheme="?attr/themePopup"
+            tools:menu="@menu/fragment_notes"
+            tools:title="Test title" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+</layout>
