Move enum classes inside another package

--- a/app/src/main/res/layout/inc_note_panel_content.xml
+++ b/app/src/main/res/layout/inc_note_panel_content.xml
@@ -11,7 +11,7 @@
 
         <import
             alias="Type"
-            type="sgtmelon.scriptum.cleanup.domain.model.key.NoteType" />
+            type="sgtmelon.scriptum.infrastructure.model.key.NoteType" />
 
         <variable
             name="menuCallback"
