--- a/app/src/main/res/layout/inc_note_panel_roll.xml
+++ b/app/src/main/res/layout/inc_note_panel_roll.xml
@@ -12,7 +12,7 @@
 
         <import
             alias="Type"
-            type="sgtmelon.scriptum.cleanup.domain.model.key.NoteType" />
+            type="sgtmelon.scriptum.infrastructure.model.key.NoteType" />
 
         <variable
             name="isDividerHide"
