--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -28,7 +28,7 @@
     <string name="pref_title_other_help">Help</string>
     <string name="pref_title_other_about">About app</string>
 
-    <string name="pref_title_help_notification_disappear">Why notifications disappear?</string>
+    <string name="pref_title_help_disappear">Why notifications disappear?</string>
     <string name="pref_title_help_privacy_policy">Privacy policy</string>
 
     <!-- Preference headers -->
@@ -72,7 +72,7 @@
     <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
 
-    <string name="pref_summary_help_notification_disappear">And how fix it</string>
+    <string name="pref_summary_help_disappear">And how fix it</string>
 
     <!-- Preference toast text -->
 
@@ -125,7 +125,7 @@
     <string name="pref_key_other_help" translatable="false">key_other_help</string>
     <string name="pref_key_other_about" translatable="false">key_other_about</string>
 
-    <string name="pref_key_help_notification_disappear" translatable="false">key_help_eternal_notification</string>
-    <string name="pref_key_help_privacy_policy" translatable="false">key_help_privacy_policy</string>
+    <string name="pref_key_help_disappear" translatable="false">key_help_eternal_notification</string>
+    <string name="pref_key_help_policy" translatable="false">key_help_privacy_policy</string>
 
 </resources>
