Move NoteType.kt to another package

--- a/app/src/main/res/layout/inc_note_panel_text.xml
+++ b/app/src/main/res/layout/inc_note_panel_text.xml
@@ -12,7 +12,7 @@
 
         <import
             alias="Type"
-            type="sgtmelon.scriptum.infrastructure.model.key.NoteType" />
+            type="sgtmelon.scriptum.infrastructure.model.key.preference.NoteType" />
 
         <variable
             name="menuCallback"
